google_kubernetes_engine/container_to_gke/k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: jchen42703/go-react-k8s-client:latest
          ports:
            - containerPort: 3000
